--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                         <a href="#what-you-do">What You Do</a>
                     </li>
                     <li>
-                        <a href="#yout-trainers">Your Trainers</a>
+                        <a href="#your-trainers">Your Trainers</a>
                     </li>
                     <li>
                         <a href="#reach-out">Reach Out</a>
@@ -60,45 +60,74 @@
         </section>
 
         <!-- "what we do" section -->
-        <section id="what-we-do">
-            <h2>What We Do</h2>
+        <section id="what-we-do" class="intro"> 
+            <h2 class="section-title primary-border">What We Do</h2>
             <p>
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus, nobis magnam laborum est ducimus obcaecati illum veniam corporis assumenda, esse expedita sapiente consequuntur tempora rerum qui. Harum at accusantium suscipit?
             </p>
         </section>
 
         <!-- "what you do" section -->
-        <section id="what-you-do">
-            <h2>What You Do</h2>
+        <section id="what-you-do" class="steps">
+            <h2 class ="section-title secondary-border">What You Do</h2>
 
             <div>
                 <img src="./assets/images/step-1.svg" alt="" />
-                <h3>Step 1: Fill Out the Form Above.</h3>
+                <h3>Step 1: <span>Fill Out the Form Above.</span></h3>
                 <p>You're already here, so why not?</p>
             </div>
 
             <div>
                 <img src="./assets/images/step-2.svg" alt="" />
-                <h3>Step 2: Consult with One of Our Triners.</h3>
+                <h3>Step 2: <span>Consult with One of Our Trainers.</span></h3>
                 <p>Are you here to build muscle, lose weight, or just feel good?</p>
             </div>
 
             <div>
                 <img src="./assets/images/step-3.svg" alt="" />
-                <h3>Step 3: Get Running.</h3>
+                <h3>Step 3: <span>Get Running.</span></h3>
                 <p>Hit the ground running (literally) once your trainer lays out your plan.</p>
             </div>
 
             <div>
                 <img src="./assets/images/step-4.svg" alt="" />
-                <h3>Step 4: See Results.</h3>
+                <h3>Step 4: <span>See Results.</span></h3>
                 <p>Bi-weekly check-ins with your trainer will keep you focused</p>
             </div>
         </section>
 
         <!-- "meet the trainers" section -->
-        <section>
-            <h2>Meet The Trainers</h2>
+        <section id="your-trainers" class="trainers">
+            <h2 class="section-title primary-border">
+                Meet The Trainers
+            </h2>
+            <article class="trainer">
+                <img src="./assets/images/trainer-1.jpg" alt="Arron Stephens in his workout clothes, ready to pump iron" />
+                <div class="trainer-bio text-left">
+                    <h3>Arron Stephens</h3>
+                    <h4>Speed / Strength</h4>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita id exercitationem adipisci odio maxime magnam recusandae voluptatem illum veniam commodi neque quis, fuga mollitia consectetur ipsam quasi libero dicta earum?                       
+                    </p>
+                </div>
+            </article>
+
+            <article class="trainer">
+                <div class="trainer-bio text-right">
+                    <h3>Joanna Gill</h3>
+                    <h4>Endurance</h4>
+                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dicta eos ullam, eum ex nisi, eius ipsam aliquam facilis repellendus ipsa culpa id aperiam aut magni non possimus qui, ea ad.</p>
+                </div>
+                <img src="./assets/images/trainer-2.jpg" alt="Arron Stephens in his workout clothes, ready to pump iron" />
+            </article>
+
+            <article class="trainer">
+                <img src="./assets/images/trainer-3.jpg" alt="Arron Stephens in his workout clothes, ready to pump iron" />
+                <div class="trainer-bio text-left">
+                    <h3>Harry "the Headband" Smith</h3>
+                    <h4>Strength</h4>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit expedita voluptas ea unde numquam accusamus maxime molestias alias repellendus labore! Esse repellendus quibusdam earum impedit provident assumenda incidunt eius recusandae?</p>
+                </div>
+            </article>
         </section>
 
         <!-- "reach out" section -->
