--- a/index.html
+++ b/index.html
@@ -131,34 +131,30 @@
         </section>
 
         <!-- "reach out" section -->
-        <section>
-            <h2>Reach Out</h2>
+        <section id="reach-out" class="contact">
+            <h2 class="section-title secondary-border">Reach Out</h2>
             <div class="contact-info">
                 <iframe 
                 src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3220.1530032455944!2d-86.76822814946838!3d36.18716060956882!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x886467b9e2e733ef%3A0x83d7e0996521719d!2s321%20Cleveland%20St%2C%20Nashville%2C%20TN%2037207!5e0!3m2!1sen!2sus!4v1601667027894!5m2!1sen!2sus" 
-                width="400" 
-                height="400" 
                 frameborder="0" 
                 style="border:0" 
-                allowfullscreen
-                aria-hidden="false" 
-                tabindex="0">
+                allowfullscreen>
                 </iframe>
-            </div>
-            <div>
-                <h3>Run Buddy</h3>
-                <p>
-                    Any questions or concerns before signing up?
-                    <br/>
-                    Let us know and we'll be happy to talk to you!
-                </p>
-                <address>
-                    55 Main Street <br/>
-                    Some Town, CA <br/>
-                    12345 <br/>
-                    P: 555.RUN.BUDZ (555.786.2839)<br/>
-                    E: <a href="mailto:info@runbuddy.io">info@runbuddy.io</a>
-                </address>
+                <div>
+                    <h3>Run Buddy</h3>
+                    <p>
+                        Any questions or concerns before signing up?
+                        <br/>
+                        Let us know and we'll be happy to talk to you!
+                    </p>
+                    <address>
+                        55 Main Street <br/>
+                        Some Town, CA <br/>
+                        12345 <br/>
+                        P: 555.RUN.BUDZ (555.786.2839)<br/>
+                        E: <a href="mailto:info@runbuddy.io">info@runbuddy.io</a>
+                    </address>
+                </div>
             </div>
         </section>
 
@@ -166,11 +162,10 @@
         <footer>
             <h2>❤️ Made with love by Run Buddy.</h2>
             <div>
-                <a href="#">Read Our Privacy Policy</a><br />
+                <a href="./privacy-policy.html">Read Our Privacy Policy</a><br />
                 &copy; 2019 Run Buddy, Inc.
             </div>
         </footer>
-
     </body>
 </html>
 
