add content to hero, replace image

--- a/index.html
+++ b/index.html
@@ -57,6 +57,12 @@
                     </button>
                 </form>
             </div>
+            <div class="hero-cta">
+                <h2>Start Building Habits.</h2>
+                <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum doloremque dicta, odio aspernatur deleniti voluptas illo similique reiciendis. Soluta facilis laboriosam necessitatibus doloribus blanditiis, dignissimos consequuntur unde enim dolorem. Aliquid?
+                </p>
+            </div>
         </section>
 
         <!-- "what we do" section -->
