--- a/index.html
+++ b/index.html
@@ -66,17 +66,26 @@
         </section>
 
         <!-- "what we do" section -->
-        <section id="what-we-do" class="intro"> 
-            <h2 class="section-title primary-border">What We Do</h2>
-            <p>
+        <section id="what-we-do" class="intro">
+            <div class="flex-row">
+                <h2 class="section-title primary-border">
+                What We Do
+                </h2>
+            </div>
+            <div class="flex-row">
+                <p>
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus, nobis magnam laborum est ducimus obcaecati illum veniam corporis assumenda, esse expedita sapiente consequuntur tempora rerum qui. Harum at accusantium suscipit?
-            </p>
+                </p>
+            </div>
         </section>
 
         <!-- "what you do" section -->
         <section id="what-you-do" class="steps">
-            <h2 class ="section-title secondary-border">What You Do</h2>
-
+            <div class="flex-row">
+                <h2 class ="section-title secondary-border">
+                What You Do
+                </h2>
+            </div>
             <div>
                 <img src="./assets/images/step-1.svg" alt="" />
                 <h3>Step 1: <span>Fill Out the Form Above.</span></h3>
@@ -104,9 +113,11 @@
 
         <!-- "meet the trainers" section -->
         <section id="your-trainers" class="trainers">
-            <h2 class="section-title primary-border">
+            <div class="flex-row">
+                <h2 class="section-title primary-border">
                 Meet The Trainers
-            </h2>
+                </h2>
+            </div>
             <article class="trainer">
                 <img src="./assets/images/trainer-1.jpg" alt="Arron Stephens in his workout clothes, ready to pump iron" />
                 <div class="trainer-bio text-left">
@@ -138,7 +149,11 @@
 
         <!-- "reach out" section -->
         <section id="reach-out" class="contact">
-            <h2 class="section-title secondary-border">Reach Out</h2>
+            <div class="flex-row">
+                <h2 class="section-title secondary-border">
+                Reach Out
+                </h2>
+            </div>
             <div class="contact-info">
                 <iframe 
                 src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3220.1530032455944!2d-86.76822814946838!3d36.18716060956882!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x886467b9e2e733ef%3A0x83d7e0996521719d!2s321%20Cleveland%20St%2C%20Nashville%2C%20TN%2037207!5e0!3m2!1sen!2sus!4v1601667027894!5m2!1sen!2sus" 
