--- a/index.html
+++ b/index.html
@@ -137,39 +137,41 @@
         </section>
 
         <!-- "meet the trainers" section -->
-        <section id="your-trainers" class="trainers">
+        <section id="your-trainers">
             <div class="flex-row">
                 <h2 class="section-title primary-border">
                 Meet The Trainers
                 </h2>
             </div>
-            <article class="trainer">
-                <img src="./assets/images/trainer-1.jpg" alt="Arron Stephens in his workout clothes, ready to pump iron" />
-                <div class="trainer-bio text-left">
-                    <h3>Arron Stephens</h3>
-                    <h4>Speed / Strength</h4>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita id exercitationem adipisci odio maxime magnam recusandae voluptatem illum veniam commodi neque quis, fuga mollitia consectetur ipsam quasi libero dicta earum?                       
-                    </p>
-                </div>
-            </article>
+            <div class="trainers">
+                <article class="trainer">
+                    <img src="./assets/images/trainer-1.jpg" alt="Arron Stephens in his workout clothes, ready to pump iron" />
+                    <div class="trainer-bio">
+                        <h3 class="trainer-name">Arron Stephens</h3>
+                        <h4 class="trainer-role">Speed / Strength</h4>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita id exercitationem adipisci odio maxime magnam recusandae voluptatem illum veniam commodi neque quis, fuga mollitia consectetur ipsam quasi libero dicta earum?                       
+                        </p>
+                    </div>
+                </article>
 
-            <article class="trainer">
-                <div class="trainer-bio text-right">
-                    <h3>Joanna Gill</h3>
-                    <h4>Endurance</h4>
-                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dicta eos ullam, eum ex nisi, eius ipsam aliquam facilis repellendus ipsa culpa id aperiam aut magni non possimus qui, ea ad.</p>
-                </div>
-                <img src="./assets/images/trainer-2.jpg" alt="Arron Stephens in his workout clothes, ready to pump iron" />
-            </article>
+                <article class="trainer">
+                    <img src="./assets/images/trainer-2.jpg" alt="Joanna Gill cooling off after a workout" />
+                    <div class="trainer-bio">
+                        <h3 class="trainer name">Joanna Gill</h3>
+                        <h4 class="trainer-role">Endurance</h4>
+                        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dicta eos ullam, eum ex nisi, eius ipsam aliquam facilis repellendus ipsa culpa id aperiam aut magni non possimus qui, ea ad.</p>
+                    </div>
+                </article>
 
-            <article class="trainer">
-                <img src="./assets/images/trainer-3.jpg" alt="Arron Stephens in his workout clothes, ready to pump iron" />
-                <div class="trainer-bio text-left">
-                    <h3>Harry "the Headband" Smith</h3>
-                    <h4>Strength</h4>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit expedita voluptas ea unde numquam accusamus maxime molestias alias repellendus labore! Esse repellendus quibusdam earum impedit provident assumenda incidunt eius recusandae?</p>
-                </div>
-            </article>
+                <article class="trainer">
+                    <img src="./assets/images/trainer-3.jpg" alt="Harry Smith wearing a headband and lifting comically small pink weights" />
+                    <div class="trainer-bio">
+                        <h3 class="trainer-name">Harry "the Headband" Smith</h3>
+                        <h4 class="trainer-role">Strength</h4>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit expedita voluptas ea unde numquam accusamus maxime molestias alias repellendus labore! Esse repellendus quibusdam earum impedit provident assumenda incidunt eius recusandae?</p>
+                    </div>
+                </article>
+            </div>
         </section>
 
         <!-- "reach out" section -->
