--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
         <header>
             <h1>RUN BUDDY</h1>
             <nav>
-                <a href="#service-plans">Service Plans</a>
                 <ul>
+                    
                     <li>
                         <a href="#what-we-do">What We Do</a>
                     </li>
@@ -20,6 +20,8 @@
                     </li>
                     <li>
                         <a href="#your-trainers">Your Trainers</a>
+                    </li>
+                    <li><a href="#service-plans">Service Plans</a>
                     </li>
                     <li>
                         <a href="#reach-out">Reach Out</a>
@@ -180,7 +182,7 @@
             </div>
         </section>
 
-        <!-- "reach out" section -->
+        <!-- service plan and reach out section -->
         <section id="service-plans" class="services">
             <h2 class="section-title secondary-border">
                 Our Service Plans
