--- a/index.html
+++ b/index.html
@@ -151,32 +151,59 @@
                 Meet The Trainers
                 </h2>
             </div>
+
             <div class="trainers">
                 <article class="trainer">
-                    <img src="./assets/images/trainer-1.jpg" alt="Arron Stephens in his workout clothes, ready to pump iron" />
+                    <div class="trainer-img trainer-1">
+                        <div>
+                            <h3>Arron Stephens</h3>
+                            <h4>Speed / Strength</h4>
+                        </div>
+                    </div>
                     <div class="trainer-bio">
-                        <h3 class="trainer-name">Arron Stephens</h3>
-                        <h4 class="trainer-role">Speed / Strength</h4>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita id exercitationem adipisci odio maxime magnam recusandae voluptatem illum veniam commodi neque quis, fuga mollitia consectetur ipsam quasi libero dicta earum?                       
+                        <div>
+                            <h3>Arron Stephens</h3>
+                            <h4>Speed / Strength</h4>
+                        </div>
+                        <p>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita id exercitationem adipisci odio maxime magnam recusandae voluptatem illum veniam commodi neque quis, fuga mollitia consectetur ipsam quasi libero dicta earum?                       
                         </p>
                     </div>
                 </article>
 
                 <article class="trainer">
-                    <img src="./assets/images/trainer-2.jpg" alt="Joanna Gill cooling off after a workout" />
+                    <div class="trainer-img trainer-2">
+                        <div>
+                            <h3>Joanna Gill</h3>
+                            <h4>Endurance</h4>
+                        </div>
+                    </div>
                     <div class="trainer-bio">
-                        <h3 class="trainer name">Joanna Gill</h3>
-                        <h4 class="trainer-role">Endurance</h4>
-                        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dicta eos ullam, eum ex nisi, eius ipsam aliquam facilis repellendus ipsa culpa id aperiam aut magni non possimus qui, ea ad.</p>
+                        <div>
+                            <h3>Joanna Gill</h3>
+                            <h4>Endurance</h4>
+                        </div>
+                        <p>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita id exercitationem adipisci odio maxime magnam recusandae voluptatem illum veniam commodi neque quis, fuga mollitia consectetur ipsam quasi libero dicta earum?                       
+                        </p>
                     </div>
                 </article>
 
                 <article class="trainer">
-                    <img src="./assets/images/trainer-3.jpg" alt="Harry Smith wearing a headband and lifting comically small pink weights" />
+                    <div class="trainer-img trainer-3">
+                        <div>
+                            <h3>Harry "the Headband" Smith</h3>
+                            <h4>Strength</h4>
+                        </div>
+                    </div>
                     <div class="trainer-bio">
-                        <h3 class="trainer-name">Harry "the Headband" Smith</h3>
-                        <h4 class="trainer-role">Strength</h4>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit expedita voluptas ea unde numquam accusamus maxime molestias alias repellendus labore! Esse repellendus quibusdam earum impedit provident assumenda incidunt eius recusandae?</p>
+                        <div>
+                            <h3>Harry "the Headband" Smith</h3>
+                            <h4>Strength</h4>
+                        </div>
+                        <p>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita id exercitationem adipisci odio maxime magnam recusandae voluptatem illum veniam commodi neque quis, fuga mollitia consectetur ipsam quasi libero dicta earum?                       
+                        </p>
                     </div>
                 </article>
             </div>
